--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,30 +1,47 @@
 .btn{
     border: 1px solid $btnBorder;
     background-color: transparent;
-    border-radius: 4px;
     
     &--light:hover, &--light:focus{
         background-color: $btnLightBg-hover;
         color: $btnLightCol-hover;
     }
 
+    &--rounded{
+        /* przycisk z zaokrąglonymi rogami */
+        border-radius: 30px;
+    }
+
     &--aboutMovie{
-        background-color: $btnAboutMovieRGBA;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-		border: none;
+        background-color: $btnAboutMovieBg;
+		color: $btnAboutMovieCol;
+        border: none;
+        text-transform:uppercase;
+		font-size: 0.875rem;
+		letter-spacing: 1px;
+        transition: 0.3s;
+        
+        &:hover{
+            background-color: $btnAboutMovieBg_hov;
+        }
     }
 
     &--projection{
-        border: none;
-        padding: 0.1em;
-        margin: 0.05em;
+        transition:0.3s;
+        border:1px solid $prawieBialy;
 
         &__hour{
-            font-size: 2rem;
+            font-size: 1.5rem;
+            margin-top: 10px;
         }
 
         &__noLbl{
             visibility: hidden;
+        }
+
+        &__info{
+            font-size: 0.875rem;
+            margin-bottom:10px;
         }
 
     }
@@ -37,16 +54,39 @@
     }
 
     &--readMore{
-        padding: 0.5em;
+        color: $btnReadMoreCol;
+        background-color: $btnReadMoreBg;
+        padding:20px;
         font-weight: 300;
         font-size: 1.3rem;
+        margin-bottom:60px;
+        margin-top:40px;
+        text-transform:uppercase;
+        font-size: 0.93rem;
+        border: 0;
+        transition:0.3s;
+
+        &:hover{
+            background-color: $btnReadMoreBg_hov;
+        }
     }
 
     &--seeCS{
-        display: block;
+        /* display: block; */
         color: $btnSeeCSCol;
+        background-color: $btnSeeCSBg;
         text-decoration: none;
-        margin: 1em auto;
+        box-shadow:none;
+        padding-left:30px;
+        padding-right:30px;
+        padding-top:15px;
+        padding-bottom:15px;
+        
+
+        &:hover{
+            color: $btnSeeCSCol_hov;
+            border-radius:0;
+        }
     }
 
     /* FLEXBOX */
