--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -6,11 +6,15 @@
 	padding-right: 20px;
 
 	&__title{
+		font-size: 1.25rem;
 		font-weight: 600;
+		margin-top: 20px;
+		text-transform:uppercase;
 	}
 
 	&__projectionsHeading{
 		font-size: 1rem;
+		margin-bottom:10px;
 	}
 
 	&__poster{
@@ -22,11 +26,19 @@
 		list-style: none;
 	}
 
-	&__seeAllBtn{ opacity: 0; }
+	&__seeAllBtn{ 
+		/* opacity: 0;  */
+	}
 	&__seeAllBtn:focus{ opacity: 1;	}
 	&:hover &__seeAllBtn{ opacity: 1; }
 
-	&__aboutBtn{ opacity: 0; }
+	&__aboutBtn{ 
+		opacity: 0; 
+		position: relative;
+		top:75%;
+		margin: 0 20px;
+		height:50px;
+	}
 	&__aboutBtn:focus{ opacity: 1; }
 	&:hover &__aboutBtn{ opacity: 1; }
 
@@ -79,10 +91,7 @@
 	&__movieLabels{ 	grid-row: 1 / 2; 	grid-column: 1; 	z-index: 2;}
 
 	&__aboutBtn{
-		height: 25%;
-		top: 50%;
-		position: relative;
-		margin: 2em;
+		
 	}
 
 	&__projections ul{
