--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,6 +12,7 @@
 @import "modules/_btn";
 @import "modules/_body";
 @import "modules/_pageContainer";
+@import "modules/_pageSection";
 @import "modules/_wrapper";
 @import "modules/_site-header";
 @import "modules/_movieSchedule";
