Dodanie adresu mail kasy do stopki

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -28,4 +28,9 @@ h3{
 a[href^="tel:"]:before {
 	content: "\260e";
 	margin-right: 0.5em;
-  }
+}
+
+a[href^="mailto:"]:before {
+	content: "\2709";
+	margin-right: 0.5em;
+}
