--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -1,6 +1,6 @@
 .movieBox{
 
-	background-color: $movieBoxBg;
+	/* background-color: $movieBoxBg; */
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	flex: 1;
 	padding-right: 20px;
@@ -26,33 +26,6 @@
 	&__projections ul{
 		list-style: none;
 	}
-
-	&__seeAllBtn{ 
-		/* opacity: 0;  */
-		margin: 10px -20px -10px -20px;
-		padding: 10px 0;
-		text-transform:uppercase;
-		font-size: 0.93rem;
-		letter-spacing:1px;
-		border: none;
-		border-top:1px solid $movieBoxSeeAllBtnBorder;
-
-		&:hover{
-			background-color: $movieBoxSeeAllBtnBg;
-		}
-	}
-	&__seeAllBtn:focus{ opacity: 1;	}
-	&:hover &__seeAllBtn{ opacity: 1; }
-
-	&__aboutBtn{ 
-		opacity: 0; 
-		position: relative;
-		top:75%;
-		margin: 0 20px;
-		height:50px;
-	}
-	&__aboutBtn:focus{ opacity: 1; }
-	&:hover &__aboutBtn{ opacity: 1; }
 
 	/* ---------------- tymczasowo ukryte --------------- */
 	&__pickProjectionLbl {
