--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -1,6 +1,5 @@
 .movieBox{
 
-	/* background-color: $movieBoxBg; */
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	flex: 1;
 	padding-right: 20px;
@@ -11,6 +10,12 @@
 		font-weight: 600;
 		margin-top: 20px;
 		text-transform:uppercase;
+	}
+
+	&__infoBox{
+		p{
+			display: inline;
+		}
 	}
 
 	&__projectionsHeading{
@@ -62,22 +67,17 @@
 
 	display: grid;
     grid-template-columns: min-content 1fr;
-    grid-template-rows: repeat(6, max-content);
+    grid-template-rows: repeat(5, min-content);
 	grid-column-gap: 20px;
 
-	&__poster{			grid-row: 1 / 6;	grid-column: 1; z-index: 1;	}
-	&__aboutBtn{ 		grid-row: 1 / 6; 	grid-column: 1; 	z-index: 3;}
+	&__poster{			grid-row: 1 / 5;	grid-column: 1; z-index: 1;	}
+	&__aboutBtn{ 		grid-row: 1 / 5; 	grid-column: 1; 	z-index: 3;}
 	&__title{ 			grid-row: 1; 	grid-column: 2;}
-	&__info--runtime{ 	grid-row: 2; 	grid-column: 2; }
-	&__info--ageCat{ 	grid-row: 3; 	grid-column: 2; }
-	&__info--genre{ 	grid-row: 4; 	grid-column: 2; }
-	&__projections{ 	grid-row: 5; 	grid-column: 2; }
+	&__infoBox{ 		grid-row: 2; 	grid-column: 2; }
+	&__projections{ 	grid-row: 3; 	grid-column: 2; }
+	&__allProjections{	grid-row: 4; 	grid-column: 2; }
 
-	&__movieLabels{ 	grid-row: 1 / 2; 	grid-column: 1; 	z-index: 2;}
-
-	&__aboutBtn{
-		
-	}
+	&__movieLabels{ 	grid-row: 1 / 2; 	grid-column: 1; 	z-index: 2;} 
 
 	&__projections ul{
 		display: grid;
