Testowe ostylowanie movieBox za pomocą grid (z tytułem na samej górze)

--- a/app/assets/styles/modules/_label.css
+++ b/app/assets/styles/modules/_label.css
@@ -8,6 +8,9 @@
 
     &--movie{
     /* label dla filmu w movieBox (repertuarze dnia) */
+        width: 200px;
+        /* float: left; */
+        height: 75px;
     }
 
     &--movies{
