--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -2,14 +2,33 @@
 
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	flex: 1;
-	padding-right: 20px;
+	/* padding-right: 20px; */
 	overflow: hidden;
 
-	&__title{
+	&__header{
+		width: 100%;
+		height: 80px;
+		background-color: rgba($szarySredni, 0.1);
+		border-bottom: 7px solid $pomaranczowy;
+		/* border-bottom: 1px solid rgba($szarySredni, 0.4); */
+		color: $prawieCzarny;
+		text-align: center;
 		font-size: 1.25rem;
 		font-weight: 600;
-		margin-top: 20px;
+		
+		/* margin: 20px; */
 		text-transform:uppercase;
+		display: flex;
+		justify-content: flex-start;
+	}
+
+	&__title{
+		padding: 0 20px;
+		flex-basis: 100%;
+	}
+
+	&__label{
+		flex:0 0 200px;
 	}
 
 	&__infoBox{
@@ -67,17 +86,20 @@
 
 	display: grid;
     grid-template-columns: min-content 1fr;
-    grid-template-rows: repeat(5, min-content);
+    grid-template-rows: repeat(3, max-content) 50px;
 	grid-column-gap: 20px;
 
-	&__poster{			grid-row: 1 / 5;	grid-column: 1; z-index: 1;	}
-	&__aboutBtn{ 		grid-row: 1 / 5; 	grid-column: 1; 	z-index: 3;}
-	&__title{ 			grid-row: 1; 	grid-column: 2;}
+	&__header{ 			grid-row: 1; 	grid-column: 1 / 3; justify-self: center; align-self: center;}
+	&__poster{			grid-row: 2 / 5;	grid-column: 1; z-index: 1;	}
+	&__aboutBtn{ 		grid-row: 2 / 5; 	grid-column: 1; z-index: 3;}
 	&__infoBox{ 		grid-row: 2; 	grid-column: 2; }
 	&__projections{ 	grid-row: 3; 	grid-column: 2; }
 	&__allProjections{	grid-row: 4; 	grid-column: 2; }
 
-	&__movieLabels{ 	grid-row: 1 / 2; 	grid-column: 1; 	z-index: 2;} 
+	&__movieLabels{ 	
+		/* display: none; */
+		/* grid-row: 1; 	grid-column: 1; 	z-index: 1; */
+	} 
 
 	&__projections ul{
 		display: grid;
