Ostylowanie movieBox w grid - działa (z drobnymi problemami przy wąskiej kolumnie) od 550px

--- a/app/assets/styles/base/_colors.css
+++ b/app/assets/styles/base/_colors.css
@@ -24,6 +24,8 @@ $primaryNavCol: $szaryJasny;
 $btnNavBg: $pomaranczowy;
 
 /* movieBox */
+$movieBoxHeaderBgRGBA: rgba($szarySredni, 0.25);
+$movieBoxBorderBottom: $pomaranczowy;
 $movieBoxSeeAllBtnBorder: $prawieBialy;
 
 /* btn */
