--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -1,37 +1,39 @@
 .movieBox{
 
+	/* USTAWIENIA */
+	/* Szerokość i wysokość plakatu - używane do wyznaczania wielkości innych elementów */
+	$posterWidth: 200px; 
+	$posterHeight: 280px;
+
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	flex: 1;
-	/* padding-right: 20px; */
 	overflow: hidden;
 
 	&__header{
 		width: 100%;
-		height: 80px;
-		background-color: rgba($szarySredni, 0.1);
-		border-bottom: 7px solid $pomaranczowy;
-		/* border-bottom: 1px solid rgba($szarySredni, 0.4); */
-		color: $prawieCzarny;
+		height: 90px;
+		background-color: $movieBoxHeaderBgRGBA;
+		border-bottom: 3px solid $movieBoxBorderBottom;
+
 		text-align: center;
 		font-size: 1.25rem;
 		font-weight: 600;
-		
-		/* margin: 20px; */
 		text-transform:uppercase;
-		display: flex;
-		justify-content: flex-start;
 	}
 
 	&__title{
 		padding: 0 20px;
-		flex-basis: 100%;
 	}
 
 	&__label{
-		flex:0 0 200px;
+		width: $posterWidth;
+        float: left;
+		height: 75px;
+		font-size: 1rem;
 	}
 
 	&__infoBox{
+		margin: 5px 20px 3px 0;
 		p{
 			display: inline;
 		}
@@ -43,8 +45,8 @@
 	}
 
 	&__poster{
-		width: 200px;
-		height: 280px;
+		width: $posterWidth;
+		height: $posterHeight;
 	}
 
 	&__projections ul{
@@ -96,12 +98,8 @@
 	&__projections{ 	grid-row: 3; 	grid-column: 2; }
 	&__allProjections{	grid-row: 4; 	grid-column: 2; }
 
-	&__movieLabels{ 	
-		/* display: none; */
-		/* grid-row: 1; 	grid-column: 1; 	z-index: 1; */
-	} 
-
 	&__projections ul{
+		margin-right: 15px;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		align-items: start;
