--- a/app/assets/styles/modules/_movieBox.css
+++ b/app/assets/styles/modules/_movieBox.css
@@ -93,7 +93,7 @@
 
 	&__header{ 			grid-row: 1; 	grid-column: 1 / 3; justify-self: center; align-self: center;}
 	&__poster{			grid-row: 2 / 5;	grid-column: 1; z-index: 1;	}
-	&__aboutBtn{ 		grid-row: 2 / 5; 	grid-column: 1; z-index: 3;}
+	&__aboutBtn{ 		grid-row: 2; 	grid-column: 1; z-index: 2;}
 	&__infoBox{ 		grid-row: 2; 	grid-column: 2; }
 	&__projections{ 	grid-row: 3; 	grid-column: 2; }
 	&__allProjections{	grid-row: 4; 	grid-column: 2; }
