Dodane testowe ramki z komunikatami o braku CSS Grid i rozdzielczości mniejszej niż 769px

--- a/app/assets/styles/modules/_test.css
+++ b/app/assets/styles/modules/_test.css
@@ -11,3 +11,28 @@
 	display: none;
 } */
 
+/* TYMCZASOWE */
+/* Styl ramki .warning dla komunikatu w wersji show */
+.warning{
+	text-align: center;
+	background-color: yellow;
+	margin: 20px;
+	padding: 20px;
+	border: 10px solid red;
+
+	&--tooSmall{
+		background-color: palegreen;
+		@mixin atMedium{
+			display: none;
+		}
+	}
+
+	&--noGrid{
+		@supports(display: grid){
+			display: none;
+		}
+	}
+
+
+}
+
