Dodanie OwlCarousel, razem z zadaniem gulp do kopiowania pliku owl.carousel.min.js do temp (przy dowolnych zmianach w js) oraz uwzględnienie w build. Usunięcie slickCarousel (jeszcze zostawione dla przykładu _slickCarousel.css)

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -34,7 +34,9 @@
 @import "modules/_mapResponsive";
 
 /* karuzela slick */
-@import "modules/_slickCarousel";
+/* @import "modules/_slickCarousel"; */
+@import "modules/_owl.carousel.min";
+@import "modules/_owl.theme.default.min";
 
 /* moduł responsywnej tabeli na cennik */
 @import "modules/_rTable";
