Całkowite usunięcie slickCarousel. Dodanie moviesCarousel (na mechanizmie owlCarousel)

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -24,6 +24,10 @@ h3{
 	font-weight: 600;
 }
 
+a{
+	text-decoration: none;
+}
+
 /* dodanie znaku-symbolu telefonu do wszystkich linków telefonicznych (tel) */
 a[href^="tel:"]:before {
 	content: "\260e";
