Dodanie klasy _hoverScale do spójnego skalowania elementów z hoverem (i focusem), poprawienie zaokrąglenia przycisków w chrome na macOS

--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -16,6 +16,7 @@ Oraz dwie dodatkowe klasy przycisków (muszą być użyte jako dodatkowe do któ
 .btn{
     border: none;
     transition:0.3s;
+    border-radius: 0px;
 
     /* Podstawowe klasy kolorów przycisków */
 
